[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/CombatPanels/Skills/SkillPanel.gd" type="Script" id=1]

[node name="SkillPanel" type="Panel"]
margin_right = 192.0
margin_bottom = 208.0
script = ExtResource( 1 )

[node name="Name" type="Label" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 190.0
margin_bottom = 16.0
text = "SKILL_NAME_PLACEHOLDER"
align = 1
valign = 1

[node name="CostLabel" type="Label" parent="."]
margin_top = 20.0
margin_right = 40.0
margin_bottom = 34.0
text = "Cost:"
align = 1
valign = 1

[node name="CostValue" type="Label" parent="CostLabel"]
margin_left = 48.0
margin_right = 192.0
margin_bottom = 14.0
text = "99"
valign = 1

[node name="TypeLabel" type="Label" parent="."]
margin_top = 32.0
margin_right = 40.0
margin_bottom = 46.0
text = " Type:"

[node name="TypeValue" type="Label" parent="TypeLabel"]
margin_left = 48.0
margin_right = 192.0
margin_bottom = 14.0
text = "Type_place_holder"
valign = 1

[node name="Description" type="Label" parent="."]
margin_left = 4.0
margin_top = 65.0
margin_right = 188.0
margin_bottom = 177.0
text = "This is the skill Panel. When opened, it will enable the skill's targeting and prompt the user to confirm the target with the confirm button."
align = 3
autowrap = true

[node name="CancelButton" type="Button" parent="."]
margin_left = 12.0
margin_top = 176.0
margin_right = 64.0
margin_bottom = 196.0
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="."]
margin_left = 112.0
margin_top = 176.0
margin_right = 174.0
margin_bottom = 196.0
disabled = true
text = "Confirm"

[connection signal="button_down" from="CancelButton" to="." method="close_panel"]
[connection signal="button_down" from="ConfirmButton" to="." method="on_skill_confirm"]
